--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,34 @@
     text-align: center;
     padding: 2rem 1rem;
 }
+
+.App--container {
+}
+
+.App--marketing {
+    display: none;
+}
+
+.App--phone-container {
+    width: 100%;
+    height: 100%;
+    padding: 12px;
+    border: 1px solid black;
+}
+
+@media (min-width: 600px) {
+    .App--container {
+    }
+    .App--marketing {
+        display: block;
+        margin: 12px;
+        padding: 36px;
+        width: 400px;
+    }
+    .App--phone-container {
+        width: 375px;
+        height: 812px;
+        margin: 12px;
+        padding: 36px;
+    }
+}
