--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:wght@400;700&display=swap");
 
 body {
-    margin: 0;
-    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  margin: 0;
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background: radial-gradient(55.5% 99.38% at 38.82% 43.56%, #FFFFFF 0%, #FFF0B3 17.29%, #BDFFF8 58.93%, #FFDE59 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */ !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(
+      55.5% 99.38% at 38.82% 43.56%,
+      #ffffff 0%,
+      #fff0b3 17.29%,
+      #bdfff8 58.93%,
+      #ffde59 100%
+    )
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */ !important;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
